<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="12dp">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="12dp">

        <!-- Başlangıç Tarihi -->

        <LinearLayout
            android:id="@+id/ll_baslangic_tarihi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textColor="@android:color/darker_gray"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_baslangic_tarihi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seciniz"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:drawableTint="@android:color/tab_indicator_text"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/holo_purple"/>

        <!-- Bitiş Tarihi -->

        <LinearLayout
            android:id="@+id/ll_bitis_tarihi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textColor="@android:color/darker_gray"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_bitis_tarihi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seciniz"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:drawableTint="@android:color/tab_indicator_text"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/holo_purple"/>

        <!-- En Düşük Değer -->

        <LinearLayout
            android:id="@+id/ll_en_dusuk_deger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/min_count"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:textStyle="bold"/>

            </LinearLayout>



            <EditText
                android:id="@+id/et_en_dusuk_deger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:maxLines="1"
                android:maxLength="5"
                android:minLines="1"
                android:gravity="left|top"
                android:inputType="number"
                android:hint="0"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/holo_purple"/>

        <!-- En Düşük Değer -->

        <LinearLayout
            android:id="@+id/ll_en_yuksek_deger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max_count"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:textStyle="bold"/>

            </LinearLayout>



            <EditText
                android:id="@+id/et_en_yuksek_deger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:maxLines="1"
                android:maxLength="5"
                android:minLines="1"
                android:gravity="left|top"
                android:inputType="number"
                android:hint="0"/>

        </LinearLayout>


        <android.support.v7.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_get_records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getir"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>


</android.support.v7.widget.CardView>
